themes/SuiteP/css/style.css
/* ... */
#wizform .other.view td {
    height: auto;
}

/* campaign wizard home start page */

#wizform fieldset legend {
    padding: 0;
}

#wizform .icon-btn-lst .icon-btn {
    background-color: #F08377;
    border-radius: 3px;
}

#wizform .icon-btn-lst .icon-btn:hover {
    background-color: #808f9c;
}

#wizform .icon-btn-lst .icon-btn a {
    text-align: center;
    line-height: 20px;
    margin: 0;
}

#wizform .icon-btn-lst .icon-btn a img {
    float: none;
}

#wizform .icon-btn-lst .icon-btn a br {
    display: block;
    float: none;
    clear: both;
}

/* campaign wizard progress bar stuff */

#wizform .progression-container .progression .nav-steps {
    background-color: #F08377;
}
#wizform .progression-container
.progression .nav-steps:hover,
#wizform .progression-container .progression .nav-steps.selected {
    background-color: #808f9c;
}

#wizform .progression li:hover::after,
#wizform .progression li.selected::after {
    border-left-color: #808f9c;
}

#wizform .progression li::after {
    border-left-color: #F08377;
}

/* campaign wizard (top) buttons */

#wizform input[type="button"],
#wizform input[type="submit"]{
    margin-left: 10px;
    margin-right: 10px;
}

/* campaign wizard forms */

#wizform td {
    margin-bottom: 24px;
}

#wizform td.emptyField {
    display: none;
}

#wizform tr.emptyRow {
    display: none;
}

/* target list page */

#wizform div.template-container-full div.row {
    padding: 5px 20px;
}

#wizform .other.view img, .other.view svg {
    width: initial;
    height: initial;
    margin: 17px 5px 5px 5px;
}

#wizform select.input-sm {
    height: 42px;
}

#wizform div.target-list-create br {
    display: none;
}
#wizform div.target-list-create input[type="button"] {
    margin-top: 16px;
}


/* Template editor */

#email_template_editor .mozaik-thumbnail.ui-draggable.ui-draggable-handle * {
    float: none;
}
#email_template_editor ul.mozaik-thumbs li.mozaik-thumbnail {
    padding: 0px;
}
#email_template_editor .mozaik-thumbnail.ui-draggable.ui-draggable-handle * {
    margin: 5px;
}

/* Marketing page */

#step2 table tr td, #step2 table th td {
    width: 80%;
}

#wizform .other.view #step2 table.edit.view tr:first-child td:first-child {
    width: 100%;
}

/* summary page */

#wizform #target_message br,
#wizform #alert_messages br {
    display: none;
}
#wizform table.diagnose_messages td {
    margin-bottom: 0px;
}
#wizform br.emptyRow {
    display: none;
}

#wizform #step3 ul li.li-tick,
#wizform #step3 ul li.li-cross {
    margin-left: 50px;
}
#wizform #step3 .button-group a.btn img {
    margin-top: 0px;
}

/* non-email campaign / budget page */

#wizform #wizard #step2 .other.view td:nth-of-type(1),
#wizform #wizard #step2 .other.view td:nth-of-type(2) {
    display: table-cell;
    float: none;
}
#wizform #wizard #step2 table tr td {
    width: auto;
    display: table-cell;
    float: none;
}

